--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
-spring.mvc.view.prefix=/WEB-INF/jsps/
-spring.mvc.view.suffix=.jsp
 debug=true
+
+#Database configurations
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springboottutorial
+spring.datasource.username=springboot
+spring.datasource.password=springboot
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+
+
+logging.level.org.hibernate.sql=DEBUG
